Actually fixed resources spacing

--- a/css/resrouces.css
+++ b/css/resrouces.css
@@ -1,8 +1,8 @@
 body {
   padding-top: 70px;
   padding-bottom: 30px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 
